--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body, html {
     width: 100%;
     height: 100%;
     background: linear-gradient(to top, #f4511e, #1e3c72); /* Your orange and blue */
-    background-image: url('assests/backgroundV2.png');
+    background-image: url('assests/backgroundV3.png');
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -37,19 +37,19 @@ h1 {
     margin: 0;
 }
 
-.buttons button {
-    background-color: #f4511e;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    margin: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+    .buttons button {
+        background-color: #f4511e;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        margin: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
 
-.buttons button:hover {
-    background-color: #1e3c72;
-}
+    .buttons button:hover {
+        background-color: #1e3c72;
+    }
 
 .circle {
     height: 24px;
@@ -69,3 +69,22 @@ h1 {
     margin-bottom: 20px; /* Add bottom margin for spacing */
 }
 
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation: star-sky-animation 60s linear infinite;
+    background-image: url("assests/stars.png");
+    background-repeat: repeat-y;
+  }
+
+  @keyframes star-sky-animation {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-100%);
+    }
+}
