--- a/button.css
+++ b/button.css
@@ -26,7 +26,7 @@
     content: "";
     background: linear-gradient(
       45deg,
-       #ffa600, #FFFFFF
+       #f44a10, #FFFFFF
     );
     position: absolute;
     top: -2px;
