--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body, html {
     padding: 0;
     overflow: hidden;
     font-family: Arial, sans-serif;
+    background-color: black;
 }
 
 .background {
@@ -25,11 +26,17 @@ body, html {
     right: 10px;
     text-align: center;
     color: white;
+    padding: 15px;
+    border-radius: 15px;
+    background-image: url("assests/stars.png");
 }
 
 h1 {
     font-size: 3rem;
     margin: 0;
+    background: linear-gradient(to right, #f44a10, white);
+    background-clip: text;
+    color: transparent;
 }
 
 .countdown p {
