--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    font-family: Arial, sans-serif;
+    font-family: arial, sans-serif;
     background-color: black;
 }
 
@@ -23,10 +23,12 @@ body, html {
 .center-content {
     position: absolute;
     bottom: 14%;
-    right: 10px;
-    text-align: center;
+    right: 30px;
+    text-align: left; /* Align text to the left */
     color: white;
     padding: 15px;
+    border-style: solid;
+    border-color: white;
     border-radius: 15px;
     background-image: url("assests/stars.png");
 }
@@ -69,12 +71,6 @@ h1 {
     pointer-events: none;
     z-index: 99999999; /* so that it stays on top of all other elements */
   }
-
-
-  .center-content {
-    text-align: left; /* Align text to the left */
-    margin-bottom: 20px; /* Add bottom margin for spacing */
-}
 
   .background-image {
     position: absolute;
