--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body, html {
     border-color: white;
     border-radius: 15px;
     background-image: url("assests/stars.png");
+    pointer-events: none;
 }
 
 h1 {
