--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ h1 {
 
   .background-image {
     position: absolute;
-    top: 130px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -87,6 +87,6 @@ h1 {
       transform: translateY(0);
     }
     100% {
-      transform: translateY(-120%);
+      transform: translateY(-1818px);
     }
 }
