--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body, html {
     height: 100%;
     background: linear-gradient(to top, #f4511e, #1e3c72); /* Your orange and blue */
     background-image: url('assests/backgroundV3.png');
+    alt: 'Adventure spelling scene of a camp at a lone beach at nigth.';
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -31,6 +32,7 @@ body, html {
     border-color: white;
     border-radius: 15px;
     background-image: url("assests/stars.png");
+    alt: 'Migthy nigth sky moving in the background.';
 }
 
 h1 {
